fixes channelgroup filtering