@@ -1,15 +1,11 @@
 package org.atlasapi.query.v5.search;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
+import java.util.stream.Stream;
 
-import javax.annotation.Nullable;
 import javax.servlet.http.HttpServletRequest;
 
 import org.atlasapi.channel.ChannelGroup;
@@ -17,31 +13,22 @@ import org.atlasapi.channel.ChannelGroupResolver;
 import org.atlasapi.channel.Platform;
 import org.atlasapi.channel.Region;
 import org.atlasapi.content.Content;
-import org.atlasapi.criteria.attribute.Attributes;
 import org.atlasapi.entity.Id;
 import org.atlasapi.entity.util.Resolved;
 import org.atlasapi.output.EntityListWriter;
 import org.atlasapi.output.EntityWriter;
-import org.atlasapi.output.NotAcceptableException;
-import org.atlasapi.output.NotFoundException;
 import org.atlasapi.output.OutputContext;
 import org.atlasapi.output.QueryResultWriter;
 import org.atlasapi.output.ResponseWriter;
 import org.atlasapi.query.common.QueryResult;
 import org.atlasapi.query.common.context.QueryContext;
-import org.atlasapi.query.v5.search.attribute.SherlockAttributes;
+import org.atlasapi.query.v5.search.attribute.SherlockParameter;
 
-import com.metabroadcast.applications.client.model.internal.ApplicationConfiguration;
 import com.metabroadcast.common.ids.NumberToShortStringCodec;
-import com.metabroadcast.common.stream.MoreCollectors;
 import com.metabroadcast.promise.Promise;
 
-import com.google.api.client.repackaged.com.google.common.base.Strings;
-import com.google.common.base.Optional;
 import com.google.common.base.Splitter;
 import com.google.common.collect.FluentIterable;
-import com.google.common.collect.ImmutableList;
-import com.google.common.util.concurrent.Futures;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -87,26 +74,26 @@ public class ContentQueryResultWriter extends QueryResultWriter<Content> {
     private OutputContext outputContext(QueryContext queryContext) {
 
         String channelGroupParam = queryContext.getRequest()
-                .getParameter(SherlockAttributes.SCHEDULE_CHANNEL_GROUP_PARAM);
+                .getParameter(SherlockParameter.SCHEDULE_CHANNEL_GROUP.getName());
 
         OutputContext.Builder builder = OutputContext.builder(queryContext);
 
         List<String> channelGroupsParams = SPLITTER.splitToList(channelGroupParam);
-        FluentIterable<ChannelGroup<?>> channelGroups = resolveChannelGroups(channelGroupsParams);
+        List<ChannelGroup<?>> channelGroups = resolveChannelGroups(channelGroupsParams);
 
-        List<Region> regions = channelGroups
+        List<Region> regions = channelGroups.stream()
                 .filter(cg -> cg instanceof Region)
-                .transform(cg -> (Region) cg)
-                .toList();
+                .map(cg -> (Region) cg)
+                .collect(Collectors.toList());
 
         if (!regions.isEmpty()) {
             builder.withRegions(regions);
         }
 
-        List<Platform> platforms = channelGroups
+        List<Platform> platforms = channelGroups.stream()
                 .filter(cg -> cg instanceof Platform)
-                .transform(cg -> (Platform) cg)
-                .toList();
+                .map(cg -> (Platform) cg)
+                .collect(Collectors.toList());
 
         if (!platforms.isEmpty()) {
             builder.withPlatforms(platforms);
@@ -115,7 +102,7 @@ public class ContentQueryResultWriter extends QueryResultWriter<Content> {
         return builder.build();
     }
 
-    private FluentIterable<ChannelGroup<?>> resolveChannelGroups(List<String> idParams) {
+    private List<ChannelGroup<?>> resolveChannelGroups(List<String> idParams) {
 
         List<Id> ids = idParams.stream()
                 .map(codec::decode)
@@ -124,6 +111,7 @@ public class ContentQueryResultWriter extends QueryResultWriter<Content> {
 
         return Promise.wrap(channelGroupResolver.resolveIds(ids))
                 .then(Resolved::getResources)
-                .get(1, TimeUnit.MINUTES);
+                .get(1, TimeUnit.MINUTES)
+                .toList();
     }
 }
